host-config/files-host/ip6tablesrc
# Generated by ip6tables-save v1.4.21 on Fri Jun 27 10:35:35 2014
*nat
:PREROUTING ACCEPT [40545:5540270]
:INPUT ACCEPT [9066:1704086]
:OUTPUT ACCEPT [2787:261267]
:POSTROUTING ACCEPT [91:15095]
-A PREROUTING -i @@default@@ -p tcp -m tcp --dport 80 -j REDIRECT --to-port 8080
-A POSTROUTING -m physdev --physdev-is-bridged -j ACCEPT
-A POSTROUTING -o @@default@@ -j MASQUERADE
COMMIT
# Completed on Fri Jun 27 10:35:35 2014
# Generated by ip6tables-save v1.4.21 on Fri Jun 27 10:35:35 2014
*mangle
:PREROUTING ACCEPT [7544082:55944809524]
:INPUT ACCEPT [6724965:55884218938]
:FORWARD ACCEPT [252:22060]
:OUTPUT ACCEPT [7094515:3264351031]
:POSTROUTING ACCEPT [7098943:3264770983]
COMMIT
# Completed on Fri Jun 27 10:35:35 2014
# Generated by ip6tables-save v1.4.21 on Fri Jun 27 10:35:35 2014
*filter
:INPUT ACCEPT [5485791:53392900070]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [7094515:3264351031]
-A INPUT -m physdev --physdev-is-bridged -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -m physdev --physdev-is-bridged -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A OUTPUT -o @@default@@ -p ipv6-icmp -m icmp6 --icmpv6-type 134 -j LOG
-A OUTPUT -o @@default@@ -p ipv6-icmp -m icmp6 --icmpv6-type 134 -j DROP
COMMIT
# Completed on Fri Jun 27 10:35:35 2014
